[gd_scene load_steps=11 format=3 uid="uid://dgcph4lqfqoic"]

[ext_resource type="Script" path="res://scenes/battle/enemy.gd" id="1_7lakh"]
[ext_resource type="Texture2D" uid="uid://dkxsypjdy5wwn" path="res://assets/Art/CHARACTERS/PORTRAITS/sprite_pigeon_enemy.png" id="2_1vw4h"]
[ext_resource type="Texture2D" uid="uid://bfmimttbch5vn" path="res://assets/textures/feather-removebg-preview.png" id="3_6r1dp"]
[ext_resource type="Texture2D" uid="uid://7yfgkw6paj1x" path="res://assets/textures/weakYES.png" id="4_ac5re"]
[ext_resource type="Texture2D" uid="uid://dk1180d6d6uam" path="res://assets/textures/strong.png" id="5_4ylvd"]
[ext_resource type="Theme" uid="uid://bmxxtjvornsya" path="res://scenes/battle/player_ui_theme.tres" id="6_5ylm8"]
[ext_resource type="Texture2D" uid="uid://cn5nc8qok6mi7" path="res://assets/textures/burningYES.png" id="6_c14ng"]
[ext_resource type="AudioStream" uid="uid://sbhkvw37lwr8" path="res://assets/Audio/SFX/hit1.ogg" id="6_pac7o"]
[ext_resource type="Texture2D" uid="uid://cut1aeewfw11f" path="res://assets/textures/frozenYES.png" id="7_702og"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljfmf"]
size = Vector2(128, 334)

[node name="Enemy" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_7lakh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_1vw4h")

[node name="Focus" type="Sprite2D" parent="."]
visible = false
position = Vector2(-71, -189)
rotation = 0.872665
scale = Vector2(0.229876, 0.229876)
texture = ExtResource("3_6r1dp")

[node name="Status" type="HBoxContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2102.0
offset_top = -250.0
offset_right = 2106.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="Weak" type="TextureRect" parent="Status"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_ac5re")
expand_mode = 1

[node name="Strong" type="TextureRect" parent="Status"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_4ylvd")
expand_mode = 1

[node name="Burning" type="TextureRect" parent="Status"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("6_c14ng")
expand_mode = 1

[node name="Frozen" type="TextureRect" parent="Status"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("7_702og")
expand_mode = 1

[node name="GridContainer" type="HBoxContainer" parent="."]
offset_left = -50.0
offset_top = -300.0
offset_right = 68.0
offset_bottom = -260.0
metadata/_edit_group_ = true

[node name="HPText" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("6_5ylm8")
text = "Health:"

[node name="ProgressBar" type="ProgressBar" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
max_value = 10.0

[node name="HP" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("6_5ylm8")
text = "10"
horizontal_alignment = 1

[node name="slash" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("6_5ylm8")
text = "/"

[node name="MaxHP" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("6_5ylm8")
text = "10"
horizontal_alignment = 1

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(-1, -15)
shape = SubResource("RectangleShape2D_ljfmf")

[node name="SFX" type="Node" parent="."]

[node name="Hit1" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_pac7o")

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
